<resources>
    <string name="app_name">HomeFinderGC</string>
    <string name="signInButton">Iniciar Sesión</string>
    <string name="loginTextView">Login</string>
    <string name="start_label">Inicio</string>
    <string name="about_us_label">Sobre Nosotros</string>
    <string name="about_us_info">Información sobre la empresa Información sobre la empresa Información sobre la empresa </string>
    <string name="home_details_label">Detalles</string>
    <string name="resumen_label">Resumen</string>
    <string name="descripcion_label">Descripción</string>
    <string name="ubicacion_label">Ubicación</string>
    <string name="distribucion_label">Distribución</string>
    <string name="contact_label">Contacto</string>
    <string name="navigation_drawer_open">DRAWER OPEN</string>
    <string name="navigation_drawer_close">DRAWER CLOSE</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_telephone">Teléfono</string>
    <string name="hint_country">País</string>
    <string name="hint_zipcode">Código Postal</string>
    <string name="hint_address">Dirección</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_subject">Asunto</string>
    <string name="hint_bodyemail">Mensaje</string>
    <string name="hint_apartment_name">Nombre Apartamento</string>
    <string name="hint_location">Ubicación</string>
    <string name="hint_price">Precio</string>
    <string name="hint_description">Descripción</string>
    <string name="hint_add_image">Añadir Imagen</string>
    <string name="for_sale_label">Se vende</string>
    <string name="for_rent_label">Se alquila</string>
    <string name="holiday_rental_label">Alquiler vacacional</string>
    <string name="company_information">\n\nInmobiliaria HomeFinder Gran Canaria es fundada por Oliver Maikath .
        Asesor inmobiliario con más de 15 años de experiencia en el sector inmobiliario.

\n\nNace en Colonia (  Alemania )  en marzo de 1968 y con sólo 2 años de edad sus padres se trasladan a Gran Canaria por motivos profesionales . Finalmente y debido a la excelente climatología de la isla deciden establecer su residencia permanente en Gran Canaria.

\n\nOliver Maikath  desarrolla sus estudios en diferentes centros de la isla logrando obtener el tercer grado en Derecho en la Facultad de Ciencias Jurídicas de Las Palmas de Gran Canaria.

\n\nHa realizado numerosos cursos de especialización en el sector inmobiliario a lo largo de sus más de 15 años de experiencia con los más prestigiosos formadores de España , logrando convertirse en un experto en estudios de mercado. Además ha realizado estudios como Administrador de Fincas , contando con amplios conocimientos de la “ Ley de Propiedad Horizontal “.

\n\nDispone de tarjeta de identificación profesional de la AIP ( Asociación Internacional de Profesionales Inmobiliarios Comunitarios ) y es miembro de ACEGI ( Asociación Canaria de Empresas de Gestión Inmobiliaria ).

\n\nEl objetivo fundamental de este profesional inmobiliario es el asesoramiento honesto y eficaz a sus clientes vendedores o compradores en todo el proceso de compra / venta de una propiedad en Canarias , tratando de transmitir a sus clientes siempre la sensación de “ estar en buenas manos “.</string>
    <string name="image">image</string>
</resources>
