<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerMode.startScreen.StartActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/floatingOptionsButton"
            layout="@layout/options_floating_button" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="30dp"
                    android:text="@string/start_label"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <include
                    android:id="@+id/recyclerView"
                    layout="@layout/start_recycler_layout" />

            </LinearLayout>

        </ScrollView>


    </android.support.design.widget.CoordinatorLayout>

    <include
        android:id="@+id/navigation_view"
        layout="@layout/options_navigation_view" />

</android.support.v4.widget.DrawerLayout>